# bamboo-core

./: Makefile  bamboo.go  bamboo_test.go  bamboo_utils.go  final_race_test_output.txt  implementation_plan.md  input_method_def.go  race_test_output.txt
docs/: migration-semantics.md
include/bamboo/: IEngine.h
include/bamboo/api/: IEngine.h
lotus-core/: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md
lotus-core/include/lotus/: charset.hpp  constants.hpp  engine.hpp  engine_utils.hpp  flattener.hpp  input_method.hpp  rules_parser.hpp  spelling.hpp  utils.hpp
lotus-core/src/: charset.cpp  engine.cpp  engine_utils.cpp  flattener.cpp  main.cpp  rules_data.cpp  rules_parser.cpp  spelling.cpp  utils.cpp
src/api/: EngineFactory.cpp
src/engine/: Character.cpp  Character.h  Engine.cpp  Engine.h  Rules.cpp  Rules.h  Spelling.cpp  Spelling.h  StateManager.cpp  StateManager.h  charset_definition.cpp  charset_definition.h  encoder.cpp  encoder.h  engine.cpp  engine.h  input_method_definition.cpp  input_method_definition.h  rule.h  rules_parser.cpp  rules_parser.h  spelling.cpp  spelling.h  transformation_utils.cpp  transformation_utils.h
tests/: differential_cases.json  engine_parity_smoke.cpp
tools/: run_differential.py
